<resources>
    <string name="app_name">Student Assistant</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_assistant">Student Assistant</string>
    <string name="offline_courses">Offline Courses</string>
    <string name="course_name">Course name</string>
    <string name="room">Room</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="teacher_name">Teacher name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="your_average">Your average</string>
    <string name="your_objective">Your objective</string>
    <string name="see_more">See more</string>
    <string name="see_all">See all</string>
    <string name="start_time">Start time</string>
    <string name="day">Day</string>
    <string name="finish_time">Finish time</string>
    <string name="add_a_grade">Add a grade</string>
    <string name="pick_a_course">Pick a course</string>
    <string name="grade_type">Choose a grade type</string>
    <string name="weight">Add weight (%)</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="more">More</string>
    <string name="open_menu">Open Menu</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_course">Add Course</string>
    <string name="add_grade">Add Grade</string>
    <string name="attendance">Attendance</string>
    <string name="classroom">Classroom</string>
    <string name="courses">Courses</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="grades">Grades</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>
    <string name="timetable">Timetable</string>
    <string name="written">Written</string>
    <string name="verbal">Verbal</string>
    <string name="there_are_no_grades">There are no grades</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="weekly_report">Weekly report</string>
    <string name="you_have_no_upcoming_events">You have no upcoming events</string>
    <string name="recently_accessed">Recently accessed</string>
    <string name="accessed_courses">Accessed courses</string>
    <string name="seems_like_you_have_not_created_any_course_yet">Seems like you have not created any course yet</string>
    <string name="get_started">Get started</string>
    <string name="today_s_schedule">Today\'s schedule</string>
    <string name="close">Close</string>
    <string name="share_with_class">Share with class</string>
    <string name="set_objective">Set objective</string>
    <string name="set">Set</string>
    <string name="class_name">Class Name</string>
    <string name="create">Create</string>
    <string name="you_re_currently_signed_in_as">You\'re currently signed in as</string>
    <string name="ask_your_teacher_for_the_class_code_then_enter_it_here">Ask your teacher for the class code, then enter it here.</string>
    <string name="to_sign_in_with_a_class_code">To sign in with a class code</string>
    <string name="use_an_authorized_account">Use an authorized account</string>
    <string name="use_a_class_code_with_6_7_letters_and_numbers_and_no_spaces_or_symbols">Use a class code, with 6 – 7 letters and numbers, and no spaces or symbols</string>
    <string name="join">Join</string>
    <string name="class_code">Class Code</string>
    <string name="create_class">Create Class</string>
    <string name="join_class">Join Class</string>
    <string name="assigned">Assigned</string>
    <string name="turned_in">Turned in</string>
    <string name="graded">Graded</string>
    <string name="turn_in">Turn in</string>
    <string name="attachments">Attachments</string>
    <string name="class_comments">Class comments</string>
    <string name="add_class_comment">Add class comment</string>
    <string name="title">Title</string>
    <string name="description_optional">Description (optional)</string>
    <string name="due_date">Due date</string>
    <string name="top_grade">Top grade</string>
    <string name="add_attachment">Add attachment</string>
    <string name="assign">Assign</string>
    <string name="grade">Grade</string>
    <string name="share">Share</string>
    <string name="upload_a_file">Upload a file</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="your_work">Your work</string>
    <string name="share_with_your_class">Share with your class</string>
    <string name="add_link">Add link</string>
    <string name="url">URL</string>
    <string name="sign_out">Sign Out</string>
    <string name="helping_educator_students_communicate_save_time_and_stay_organized">Helping educator students communicate, save time, and stay organized.</string>
    <string name="no_grades">No grades</string>
    <string name="grades_you_add_will_show_up_here">Grades you add will show up here</string>
    <string name="no_courses">No courses</string>
    <string name="courses_you_add_will_show_up_here">Courses you add will show up here</string>
    <string name="due">Due:</string>
    <string name="create_course_work">Create Course Work</string>
    <string name="classroom_course_indicator">Classroom Course Indicator</string>
    <string name="attachment_icon">Attachment Icon</string>
    <string name="user_photo_illustration">User Photo Illustration</string>
    <string name="placeholder_image">Placeholder Image</string>
    <string name="placeholder_icon">Placeholder Icon</string>
    <string name="course_indicator_color">Course Indicator Color</string>
    <string name="dash">-</string>
    <string name="add_work">Add work</string>
    <string name="no_recently_accessed_course_illustration">No Recently Accessed Course Illustration</string>
    <string name="no_upcoming_event_illustration">No Upcoming Event Illustration</string>
    <string name="shortcut_to_add_course_add_grade_and_add_attendance">Shortcut to Add Course, Add Grade and Add Attendance</string>
    <string name="shortcut_to_add_course">Shortcut to Add Course</string>
    <string name="shortcut_to_add_grade">Shortcut to Add Grade</string>
    <string name="shortcut_to_add_attendance">Shortcut to Add Attendance</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="edit_course">Edit Course</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="icon_for_changing_course_color">Icon for changing course color.</string>
    <string name="no_grade_added_illustration">No Grade Added Illustration</string>
    <string name="no_course_added_illustration">No Course Added Illustration</string>
    <string name="edit_or_delete_course">Edit or Delete Course</string>
    <string name="delete_course_message">Are you sure you want to delete this course? This action cannot be undone.</string>
    <string name="delete_course">Delete Course</string>
    <string name="edit_grade">Edit Grade</string>
    <string name="delete_grade">Delete Grade</string>
    <string name="delete_grade_message">Are you sure you want to delete this grade? This action cannot be undone.</string>
    <string name="add_new_course">Add new course</string>
    <string name="day_of_week">Day of week</string>
    <string name="please_enter_a_valid_value">Please enter a valid value</string>


    <array name="offline_course_colors_array">
        <item>@color/course_color_1</item>
        <item>@color/course_color_2</item>
        <item>@color/course_color_3</item>
        <item>@color/course_color_4</item>
        <item>@color/course_color_5</item>
        <item>@color/course_color_6</item>
        <item>@color/course_color_7</item>
        <item>@color/course_color_8</item>
        <item>@color/course_color_9</item>
        <item>@color/course_color_10</item>
    </array>
</resources>