<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/overviewFragment"
            android:title="@string/overview"
            android:icon="@drawable/ic_home"
            android:checkable="true" />
        <item
            android:id="@+id/classroomFragment"
            android:title="@string/classroom"
            android:icon="@drawable/ic_classroom"
            android:checkable="true" />
        <item
            android:id="@+id/offlineCoursesFragment"
            android:title="@string/courses"
            android:icon="@drawable/ic_courses"
            android:checkable="true" />
        <item
            android:id="@+id/gradesFragment"
            android:title="@string/grades"
            android:icon="@drawable/ic_grades"
            android:checkable="true" />
    </group>

    <group android:id="@+id/group2">

        <item
            android:id="@+id/timetableFragment"
            android:title="@string/timetable"
            android:icon="@drawable/ic_timetable"
            android:checkable="true" />
        <item
            android:id="@+id/settingsFragment"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"
            android:checkable="true" />

    </group>
</menu>