<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_backgrounds_main_background"
    tools:context=".grades.addGrade.view.AddGradeFragment">

    <EditText
        android:id="@+id/et_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_grades"
        android:hint="@string/add_a_grade"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_texts_stroke"
        app:layout_constraintTop_toBottomOf="@+id/et_grade" />

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/light_texts_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <EditText
        android:id="@+id/et_pick_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_courses"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/pick_a_course"
        android:minHeight="48dp"
        android:textColorHint="@color/light_texts_main_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view9" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_texts_stroke"
        app:layout_constraintTop_toBottomOf="@+id/et_pick_course" />

    <EditText
        android:id="@+id/et_grade_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_edit"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/grade_type"
        android:minHeight="48dp"
        android:textColorHint="@color/light_texts_main_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pick_course" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_texts_stroke"
        app:layout_constraintTop_toBottomOf="@+id/et_grade_type" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/light_texts_stroke"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_weight"
        android:hint="@string/weight"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_texts_stroke"
        app:layout_constraintTop_toBottomOf="@+id/et_weight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_grade_back"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:text="@string/back"
        android:textAppearance="@style/LightCategoryTitle"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_grade_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        app:strokeColor="@color/light_backgrounds_closest_event_background">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_grade_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:paddingVertical="16dp"
        app:layout_constraintDimensionRatio="3:2"
        app:cornerRadius="8dp"
        android:textAppearance="@style/LightCategoryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_add_grade_back"
        app:layout_constraintTop_toTopOf="@+id/btn_add_grade_back" />

</androidx.constraintlayout.widget.ConstraintLayout>